# anemone

./: .gitignore  CMakeLists.txt  configure.sh  default.cfg
components/: brookshear.lua  brookshear.py  examplecomponent.lua
lib/: CMakeLists.txt
src/: component.cpp  config.cpp  log.cpp  log.hpp  luahooks.cpp  main.cpp  main.hpp  pythonhooks.cpp  util.cpp
